--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Helvetica Neue, sans-serif;
   line-height: 1.6;
+}
+
+body, input, textarea, keygen, select, button {
+  font-family: Helvetica Neue, sans-serif;
 }
